# swt

./: .gitignore  SWT2-直接启动.bat  components.json  index.html  package-lock.json  package.json  run-swt2.bat
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  db.rs  downloader.rs  error.rs  lib.rs  main.rs  model_registry.rs  sidecar.rs
src-tauri/src/commands/: api_server.rs  conversation.rs  history.rs  mod.rs  models.rs  settings.rs  stream.rs  transcribe.rs  tts.rs
src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  select.tsx  separator.tsx  tabs.tsx  textarea.tsx
src/hooks/: useI18n.tsx  useInvoke.ts  useTheme.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: AboutPage.tsx  ApiServerPage.tsx  ConversationPage.tsx  HistoryPage.tsx  ModelManagerPage.tsx  RealTimePage.tsx  SettingsPage.tsx  TranscribePage.tsx  TtsPage.tsx
